@@ -36,3 +36,7 @@ branch_target_2:
 	mfsprg7 0
 	mtsprg 7, 0
 	mtsprg7 0
+
+	dcbt 5,6
+	dcbt 0,5,6
+	dcbt 8,5,6
